fix: correct VisitorCart styles
Added text-overflow: ellipsis when too much text

--- a/src/components/visitor-cart/visitor-cart.less
+++ b/src/components/visitor-cart/visitor-cart.less
@@ -25,6 +25,11 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: normal;
+
+		padding-right: 50px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	position: relative;
@@ -98,7 +103,7 @@
 .increase-value-list {
 	display: flex;
 	justify-content: space-evenly;
-	gap: 25px;
+	gap: 10px;
 	align-items: center;
 	padding-right: 78px;
 }
